# Photobook

./: .gitignore  01_rotate.py  02_pdf.py  README.md  app.py  config.json  convert_heic_jpeg.py  export_gps_img.py  export_gps_two_folders.py  photobook.py  photobook_gps.py  pyproject.toml
templates/: index.html  review.html
