[project]
name = "photobook"
version = "0.1.0"
description = "Generate photobooks with optional per-photo static map images from EXIF GPS data"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Pillow>=10.0",
    "fpdf2>=2.7",
    "tqdm>=4.66",
    "pdf2image>=1.17",
    "staticmap>=0.5",
    "pillow-heif>=0.15",
]

[tool.uv]
managed = true
